--- a/source/css/agency.css.less
+++ b/source/css/agency.css.less
@@ -73,7 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 	.button-variant(white; @brand-primary; @brand-primary);
 	.heading-font;
 	font-weight: 700;
-	border-radius: 3px;
+	border-radius: 40px;
 	font-size: 18px;
 	padding: 20px 40px;
 }
@@ -162,10 +162,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: url('../img/header-bg.jpg');
-	background-repeat: none;
+	background-image: url('../img/header-bg.gif');
+	background-color: rgba(132,142,141,0.7);
+	background-blend-mode: darken;
+	background-repeat: no-repeat;
 	background-attachment: scroll;
-	background-position: center center;
+	background-position: center bottom;
 	.background-cover;
 	text-align: center;
 	color: white;
@@ -177,15 +179,21 @@ header {
 			font-style: italic;
 			font-size: 22px;
 			line-height: 22px;
-			margin-bottom: 25px;
+			margin: 0 auto 25px;
 		}
 		.intro-heading {
 			.heading-font;
 			font-weight: 700;
 			font-size: 50px;
 			line-height: 50px;
-			margin-bottom: 25px;
+			margin: 0 auto 25px;
 		}
+	}
+}
+
+@media(max-width:400px) {
+	header {
+		background-position: right center;
 	}
 }
 
@@ -200,6 +208,7 @@ header {
 				font-size: 40px;
 				line-height: 40px;
 				margin-bottom: 25px;
+				width: 580px;
 			}
 			.intro-heading {
 				.heading-font;
@@ -215,7 +224,7 @@ header {
 // Global Section Styles
 
 section {
-    padding: 100px 0;
+    padding: 50px 0;
     h2.section-heading {
 		font-size: 40px;
 		margin-top: 0;
@@ -227,13 +236,44 @@ section {
 		text-transform: none;
 		font-style: italic;
 		font-weight: 400;
-		margin-bottom: 75px;
+		margin-bottom: 50px;
     }
+	.iframe-wrapper {
+		position: relative;
+		padding-bottom: 56.25%;
+		height: 0;
+		overflow: hidden;
+	}
+	  
+	.iframe-wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	}
 }
 
 @media(min-width:768px) {
 	section {
-		padding: 150px 0;
+		padding: 75px 0;
+	}
+}
+
+#projects {
+	text-align: center;
+	h4 {
+		margin-top: 25px;
+		margin-bottom: 0;
+		text-transform: none;
+	}
+	p {
+		margin-top: 0;
+	}
+	img {
+		-moz-border-radius:10px;
+		-webkit-border-radius:10px;
+		border-radius:10px;
 	}
 }
 
